@@ -10,6 +10,7 @@ define( function( require ) {
     PH_RANGE: new Range( -1, 15, 7 ),
     BEAKER_VOLUME: 1.2, // L
     VOLUME_DECIMAL_PLACES: 2,
-    PH_DECIMAL_PLACES: 2
+    PH_DECIMAL_PLACES: 2,
+    MIN_SOLUTION_VOLUME: 0.015  // L, minimum non-zero volume for solution, so it's visible and measurable
   };
 } );
