@@ -11,11 +11,9 @@ define( function( require ) {
 
   // imports
   var inherit = require( 'PHET_CORE/inherit' );
+  var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var Util = require( 'DOT/Util' );
-
-  // constants
-  var MIN_NONZERO_HEIGHT = 5; // minimum height for a solution with non-zero volume, set by visual inspection
 
   /**
    * @param {Solution} solution
@@ -48,15 +46,18 @@ define( function( require ) {
     var viewWidth = mvt.modelToViewDeltaX( beaker.size.width );
     solution.volumeProperty.link( function( volume ) {
 
+      // min non-zero volume, so that the solution is visible to the user and detectable by the concentration probe
+      if ( volume > 0 && volume < PHScaleConstants.MIN_SOLUTION_VOLUME ) {
+        volume = PHScaleConstants.MIN_SOLUTION_VOLUME;
+      }
+
       // determine dimensions in model coordinates
       var solutionHeight = Util.linear( 0, beaker.volume, 0, beaker.size.height, volume ); // volume -> height
-      if ( volume > 0 && solutionHeight < MIN_NONZERO_HEIGHT ) {
-        // constrain non-zero volume to minimum height, so that the solution is visible to the user and detectable by the concentration probe
-        solutionHeight = MIN_NONZERO_HEIGHT;
-      }
 
       // convert to view coordinates and create shape
       var viewHeight = mvt.modelToViewDeltaY( solutionHeight );
+
+      // shape
       thisNode.setRect( viewLocation.x - (viewWidth / 2), viewLocation.y - viewHeight, viewWidth, viewHeight );
     } );
   }
